dark mode fixes

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -144,4 +144,8 @@ input, textarea
   .dark-mode &
     color: #ffffff
 
+.dark-mode-content
+  .dark-mode &
+    color: $yellow
+
 @import "~bulma"
